feat: SseEmitter Service 작성